fixed layout issued for entry display.

--- a/scss/entryview.scss
+++ b/scss/entryview.scss
@@ -8,7 +8,7 @@ $break-mobile: 760px;
   position: fixed;
   z-index: 150;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   background: #3c6478;
   top: 0;
   left: 0;
@@ -28,6 +28,13 @@ $break-mobile: 760px;
     opacity: 0;
     transition: all 250ms ease;
     cursor: pointer;
+    z-index: 1;
+
+    @media screen and (max-width: $break-mobile) {
+      font-size: 2em;
+      top: 0.25em;
+      left: 0.25em;
+    }
 
     &.close__btn-visible {
       opacity: 1;
@@ -35,12 +42,16 @@ $break-mobile: 760px;
   }
 
   .entry__display {
-    width: 100%;
+    top: 0;
+    bottom: 0;
+    position: fixed;
+    overflow-x: hidden;
+    overflow-y: scroll;
     max-width: 600px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     margin: 0 auto;
     padding: 2em;
     opacity: 0;
@@ -49,7 +60,6 @@ $break-mobile: 760px;
     @media screen and (max-width: $break-mobile) {
       max-width: none;
       width: auto;
-      margin-top: 2em;
     }
 
     &.entry__display-visible {
